# aya-test-bpf

./: Cargo.toml  README.md
aya-test-bpf/: Cargo.toml
aya-test-bpf-common/: Cargo.toml
aya-test-bpf-common/src/: lib.rs
aya-test-bpf-ebpf/: Cargo.toml
aya-test-bpf-ebpf/src/: bindings.rs  main.rs
aya-test-bpf/src/: main.rs  proc_maps.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  codegen.rs
