[package]
name = "aya-test-bpf"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { path = "../../aya/aya", features = ["async_tokio"] }
aya-test-bpf-common = { path = "../aya-test-bpf-common", features=["userspace"] }
anyhow = "1.0.42"
bytes = "1"
tokio = { version = "1.9.0", features = ["full"] }
futures = "0.3.16"
serde_json = "1.0.53"
uuid = "0.8.1"
itertools = "0.10.1"
libc = "0.2.99"
# proc-maps = "0.1.9" # resolve conflict with xtask -> aya-gen -> bindgen first
memmap2 = "0.3.0"

[dependencies.object]
default-features = false
features = ["std", "read_core", "elf", "unaligned"]
version = "0.26.0"

[[bin]]
name = "aya-test-bpf"
path = "src/main.rs"
